--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3001 --host 0.0.0.0"
+    "start": "json-server --watch db.json --port $PORT --host 0.0.0.0",
+    "start-dev": "cross-env PORT=3001 npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
