--- a/api/package.json
+++ b/api/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3001 --host 0.0.0.0"
+    "start": "json-server-auth --watch db.json --port $PORT --host 0.0.0.0 -r routes.json",
+    "start-dev": "json-server-auth --watch db.json --port 3001 -r routes.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "json-server": "^0.17.0"
-  },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0"
   }
 }
