--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server-auth --watch db.json --port $PORT --host 0.0.0.0 -r routes.json",
+    "start": "json-server-auth --watch db.json --port 3001 --host 0.0.0.0 -r routes.json",
     "start-dev": "json-server-auth --watch db.json --port 3001 -r routes.json"
   },
   "keywords": [],
